--- a/template/.github/workflows/release.yml.jinja
+++ b/template/.github/workflows/release.yml.jinja
@@ -1,22 +1,22 @@
 name: "release"
 on:
-  workflow_dispatch: {}
-
+  workflow_dispatch:
 jobs:
-  sync:
+  release:
     runs-on: "{{ actions_runner }}"
     steps:
-      - uses: "dropseed/changerelease@v1.6.0"
+      - uses: "dropseed/changerelease@3b121c9e98fa055f59a32b023cb4fd2325f4d9dc" # v1.6.0
         with:
           github_token: "{% raw %}${{ secrets.GITHUB_TOKEN }}{% endraw %}"
           tag_prefix: ""
-  publish:
-    runs-on: "{{ actions_runner }}"
-    steps:
-      - uses: "blakeNaccarato/copier-python-workflow-setup@v0.2.3"
+      - uses: "actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11" # v4.1.1
         with:
-          python-version: "{{ python_version }}"
-          install-project: false
+          submodules: True
+      - uses: "actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c" # v5.0.0
+        with:
+          python-version: "3.11"
+      - shell: "pwsh"
+        run: "scripts/Sync-Py.ps1"
       - run: "flit publish"
         env:
           FLIT_USERNAME: "__token__"
