--- a/template/scripts/{{ project_name }}_tools/__main__.py.jinja
+++ b/template/scripts/{{ project_name }}_tools/__main__.py.jinja
@@ -2,7 +2,7 @@
 
 import json
 import tomllib
-from collections.abc import Iterable, Mapping, Sequence
+from collections.abc import Mapping, Sequence
 from datetime import UTC, date, datetime, time
 from json import dumps
 from pathlib import Path
@@ -25,8 +25,6 @@ def main():
 
 
 # ! For local dev config tooling
-
-
 PYRIGHTCONFIG = Path("pyrightconfig.json")
 """Resulting pyright configuration file."""
 PYTEST = Path("pytest.ini")
@@ -72,7 +70,7 @@ match version_info[:2]:
     case (3, 13):
         _python_version = "3.13"
     case _:
-        _python_version = "3.11"
+        _python_version = "{{ python_version }}"
 VERSION = _python_version
 """Python version associated with this platform."""
 
@@ -109,16 +107,14 @@ def compile(high: bool = False) -> Path:  # noqa: A001
     sep = " "
     result = run(
         args=split(
-            sep.join(
-                [
-                    f"{Path(executable).as_posix()} -m uv",
-                    f"pip compile --python-version {VERSION}",
-                    f"--resolution {'highest' if high else 'lowest-direct'}",
-                    f"--exclude-newer {datetime.now(UTC).isoformat().replace('+00:00', 'Z')}",
-                    "--all-extras",
-                    sep.join([p.as_posix() for p in [PYPROJECT, DEV, SYNC]]),
-                ]
-            )
+            sep.join([
+                f"{Path(executable).as_posix()} -m uv",
+                f"pip compile --python-version {VERSION}",
+                f"--resolution {'highest' if high else 'lowest-direct'}",
+                f"--exclude-newer {datetime.now(UTC).isoformat().replace('+00:00', 'Z')}",
+                "--all-extras",
+                sep.join([p.as_posix() for p in [PYPROJECT, DEV, SYNC]]),
+            ])
         ),
         capture_output=True,
         check=False,
@@ -130,16 +126,14 @@ def compile(high: bool = False) -> Path:  # noqa: A001
     comp.write_text(
         encoding="utf-8",
         data=(
-            "\n".join(
-                [
-                    *[r.strip() for r in [result.stdout]],
-                    *[
-                        line.strip()
-                        for line in NODEPS.read_text("utf-8").splitlines()
-                        if not line.strip().startswith("#")
-                    ],
-                ]
-            )
+            "\n".join([
+                *[r.strip() for r in [result.stdout]],
+                *[
+                    line.strip()
+                    for line in NODEPS.read_text("utf-8").splitlines()
+                    if not line.strip().startswith("#")
+                ],
+            ])
             + "\n"
         ),
     )
@@ -200,17 +194,13 @@ def sync_local_dev_configs():
     configuration in `pyproject.toml`, which drives CI or if shadow configs are not
     present. Shadow configs are in `.gitignore` to facilitate local-only shadowing.
 
-    Local pyright configuration includes the editable local `boilercore` dependency to
-    facilitate refactoring and runing on the latest uncommitted code of that dependency.
     Concurrent test runs are disabled in the local pytest configuration which slows down
     the usual local, granular test workflow.
     """
     config = tomllib.loads(PYPROJECT.read_text("utf-8"))
     # Write pyrightconfig.json
     pyright = config["tool"]["pyright"]
-    data = dumps(
-        add_pyright_includes(pyright, [".", Path("../boilercore/src")]), indent=2
-    )
+    data = dumps(pyright, indent=2)
     PYRIGHTCONFIG.write_text(encoding="utf-8", data=f"{data}\n")
     # Write pytest.ini
     pytest = config["tool"]["pytest"]["ini_options"]
@@ -225,27 +215,6 @@ Leaf: TypeAlias = int | float | bool | date | time | str
 """Leaf node."""
 Node: TypeAlias = Leaf | Sequence["Node"] | Mapping[str, "Node"]
 """General node."""
-
-
-def add_pyright_includes(
-    config: dict[str, Node], others: Iterable[Path | str]
-) -> dict[str, Node]:
-    """Include additional paths in pyright configuration.
-
-    Args:
-        config: Pyright configuration.
-        others: Local paths to add to includes.
-
-    Returns:
-        Modified pyright configuration.
-    """
-    includes = config.pop("include", [])
-    if not isinstance(includes, Sequence):
-        raise TypeError("Expected a sequence of includes.")
-    return {
-        "include": [*includes, *[str(Path(incl).as_posix()) for incl in others]],
-        **config,
-    }
 
 
 def disable_concurrent_tests(addopts: str) -> str:
