--- a/template/.github/workflows/ci.yml.jinja
+++ b/template/.github/workflows/ci.yml.jinja
@@ -39,7 +39,7 @@ jobs:
           submodules: True
       - uses: "actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c" # v5.0.0
         with:
-          python-version: "3.11"
+          python-version: "{{ python_version }}"
       - shell: "pwsh"
         run: "scripts/Sync-Py.ps1 -Compile"
       - run: "ruff --no-fix --output-format github ."
@@ -51,7 +51,7 @@ jobs:
           submodules: True
       - uses: "actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c" # v5.0.0
         with:
-          python-version: "3.11"
+          python-version: "{{ python_version }}"
       - shell: "pwsh"
         run: "scripts/Sync-Py.ps1 -Compile"
       - run: "fawltydeps"
@@ -63,7 +63,7 @@ jobs:
           submodules: True
       - uses: "actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c" # v5.0.0
         with:
-          python-version: "3.11"
+          python-version: "{{ python_version }}"
       - shell: "pwsh"
         run: "scripts/Sync-Py.ps1 -Compile"
       - run: pyright
@@ -122,7 +122,7 @@ jobs:
           submodules: True
       - uses: "actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c" # v5.0.0
         with:
-          python-version: "3.11"
+          python-version: "{{ python_version }}"
       - uses: actions/download-artifact@c850b930e6ba138125429b7e5c93fc707a7f8427 # v4.1.4
         with:
           path: ".comps"
@@ -163,7 +163,7 @@ jobs:
       - if: steps.changes.outputs.deps == 'true' && steps.changes.outputs.lock == 'false'
         uses: "actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c" # v5.0.0
         with:
-          python-version: "3.11"
+          python-version: "{{ python_version }}"
       - if: steps.changes.outputs.deps == 'true' && steps.changes.outputs.lock == 'false'
         uses: actions/download-artifact@c850b930e6ba138125429b7e5c93fc707a7f8427 # v4.1.4
         with:
