--- a/template/.github/workflows/contrib.yml.jinja
+++ b/template/.github/workflows/contrib.yml.jinja
@@ -34,6 +34,6 @@ jobs:
           submodules: True
       - uses: "actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c" # v5.0.0
         with:
-          python-version: "3.11"
+          python-version: "{{ python_version }}"
       - shell: "pwsh"
         run: "scripts/Sync-Py.ps1 -Compile {% raw %}${{ matrix.lock }}{% endraw %}"
