Update from template, fix some things

--- a/template/tests/{{ project_name }}_tests/test_{{ project_name }}.py.jinja
+++ b/template/tests/{{ project_name }}_tests/test_{{ project_name }}.py.jinja
@@ -3,4 +3,4 @@
 
 def test_import():
     """Trivial test that the package is importable."""
-    import {{ project_name }}  # noqa: F401
+    import {{ project_name }}  # noqa: F401, PLC0415
