--- a/template/scripts/Sync-Py.ps1.jinja
+++ b/template/scripts/Sync-Py.ps1.jinja
@@ -29,16 +29,15 @@ function Sync-Py {
     <#.SYNOPSIS
     Sync Python dependencies.#>
 
-    '***SYNCING' | Write-PyProgress
-
     $Version = $Version ? $Version : (Get-PyDevVersion)
     $py = $Env:CI ? (Get-PySystem $Version) : (Get-Py $Version)
-
+    "***SYNCING '$py'" | Write-PyProgress
     # ? Python environment scripts
     $scripts = Get-PyScripts $py
     $pip = "$scripts/pip"
     $uv = "$scripts/uv"
     $tools = "$scripts/{{ project_name }}_tools"
+    $dvc = "$scripts/dvc"
     $uvPip = "$uv pip"
 
     # ? Install directly to system if in CI, breaking system packages if needed
@@ -131,13 +130,13 @@ function Get-PySystem {
     Get system Python interpreter.#>
     Param([Parameter(Mandatory, ValueFromPipeline)][string]$Version)
     process {
-        if ((Test-Command 'py') -and
-        (py '--list' | Select-String -Pattern "^\s?-V:$([Regex]::Escape($Version))")) {
-            return Invoke-Expression "py -$Version -c 'from sys import executable; print(executable)'"
+        if ((Test-Command 'py') -and (py '--list' | Select-String -Pattern "^\s?-V:$([Regex]::Escape($Version))")) {
+            $py = "py -$Version"
         }
-        elseif (Test-Command "python$Version") { return "python$Version" }
-        elseif (Test-Command 'python') { return 'python' }
-        throw "Expected Python $Version, which does not appear to be installed. Ensure it is installed (e.g. from https://www.python.org/downloads/) and run this script again."
+        elseif (Test-Command ($py = "python$Version")) { }
+        elseif (Test-Command ($py = 'python')) { }
+        else { throw "Expected Python $Version, which does not appear to be installed. Ensure it is installed (e.g. from https://www.python.org/downloads/) and run this script again." }
+        return Invoke-Expression "$py -c 'from sys import executable; print(executable)'"
     }
 }
 
