Propagate changes to template

--- a/template/.github/workflows/contrib.yml.jinja
+++ b/template/.github/workflows/contrib.yml.jinja
@@ -17,17 +17,14 @@ on:
       - "scripts/pyproject.toml"
 jobs:
   contrib:
-    env:
-      SYNC_PY_DISABLE_CI: true
     strategy:
       matrix:
         runner:
           - "macos-13"
           - "ubuntu-22.04"
           - "windows-2022"
-        lock:
-          - ""
-          - "-Lock"
+    env:
+      SYNC_PY_DISABLE_CI: true
     runs-on: "{% raw %}${{ matrix.runner }}{% endraw %}"
     steps:
       - uses: "actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11" # v4.1.1
@@ -37,4 +34,21 @@ jobs:
         with:
           python-version: "{{ python_version }}"
       - shell: "pwsh"
-        run: "scripts/Sync-Py.ps1 -Compile {% raw %}${{ matrix.lock }}{% endraw %}"
+        run: "scripts/Sync-Py.ps1 -Compile -Lock -Version '{{ python_version }}'"
+  ci:
+    strategy:
+      matrix:
+        runner:
+          - "macos-13"
+          - "ubuntu-22.04"
+          - "windows-2022"
+    runs-on: "{% raw %}${{ matrix.runner }}{% endraw %}"
+    steps:
+      - uses: "actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11" # v4.1.1
+        with:
+          submodules: True
+      - uses: "actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c" # v5.0.0
+        with:
+          python-version: "{{ python_version }}"
+      - shell: "pwsh"
+        run: "scripts/Sync-Py.ps1 -Compile -Lock -Version '{{ python_version }}'"
