Fix repo name, enable task lists and strikethroughs in docs

--- a/template/docs/conf.py.jinja
+++ b/template/docs/conf.py.jinja
@@ -120,11 +120,14 @@ html_theme_options = {
 }
 # ! MyST
 myst_enable_extensions = [
-    "colon_fence",
-    "dollarmath",
     "attrs_block",
+    "colon_fence",
+    "deflist",
+    "dollarmath",
     "linkify",
+    "strikethrough",
     "substitution",
+    "task_lists",
 ]
 myst_heading_anchors = 6
 myst_substitutions = {}
