Fix tasklist extension name

--- a/template/docs/conf.py.jinja
+++ b/template/docs/conf.py.jinja
@@ -127,7 +127,7 @@ myst_enable_extensions = [
     "linkify",
     "strikethrough",
     "substitution",
-    "task_lists",
+    "tasklist",
 ]
 myst_heading_anchors = 6
 myst_substitutions = {}
