--- a/template/scripts/Sync-Py.ps1.jinja
+++ b/template/scripts/Sync-Py.ps1.jinja
@@ -19,12 +19,9 @@ Param(
 . 'scripts/Set-StrictErrors.ps1'
 # ? Allow disabling CI when in CI, in order to test local dev workflows
 $Env:CI = $Env:SYNC_PY_DISABLE_CI ? $null : $Env:CI
-Write-Host $($Env:CI ? 'Will act as if in CI' : 'Will act as if running locally')
 # ? Don't pre-sync or post-sync in CI
 $NoPreSync = $NoPreSync ? $NoPreSync : [bool]$Env:CI
-Write-Host $($NoPreSync ? "Won't run pre-sync tasks" : 'Will run pre-sync tasks')
 $NoPostSync = $NoPostSync ? $NoPostSync : [bool]$Env:CI
-Write-Host $($NoPostSync ? "Won't run post-sync tasks" : 'Will run post-sync tasks')
 # ? Core dependencies needed for syncing
 $PRE_SYNC_DEPENDENCIES = 'requirements/sync.in'
 
@@ -32,14 +29,25 @@ function Sync-Py {
     <#.SYNOPSIS
     Sync Python dependencies.#>
 
+    # ? Print invocation details
+    '***SYNCING' | Write-PyProgress
     $Version = $Version ? $Version : (Get-PyDevVersion)
-    $py = $Env:CI ? (Get-PySystem $Version) : (Get-Py $Version)
-    "***SYNCING '$py'" | Write-PyProgress
-    # ? Python environment scripts
-    $scripts = Get-PyScripts $py
-    $pip = "$scripts/pip"
-    $uv = "$scripts/uv"
-    $tools = "$scripts/{{ project_name }}_tools"
+    if ($Env:CI) {
+        $py = Get-PySystem $Version
+        "USING $(Resolve-Path $py)" | Write-PyProgress -Info
+    }
+    else {
+        $py = Get-Py $Version
+        "USING $(Resolve-Path $py -Relative)" | Write-PyProgress -Info
+    }
+    $($Env:CI ? 'Will act as if in CI' : 'Will act as if running locally') | Write-PyProgress -Info
+    $($Env:CI ? 'Will act as if in CI' : 'Will act as if running locally') | Write-PyProgress -Info
+    $($NoPostSync ? "Won't run post-sync tasks" : 'Will run post-sync tasks') | Write-PyProgress -Info
+    # ? Python environment modules and scripts
+    $pyScripts = Get-PyScripts $py
+    $pip = "$pyScripts/pip"
+    $uv = "$pyScripts/uv"
+    $tools = "$pyScripts/{{ project_name }}_tools"
     $uvPip = "$uv pip"
 
     # ? Install directly to system if in CI, breaking system packages if needed
@@ -59,13 +67,13 @@ function Sync-Py {
         'RUNNING PRE-SYNC TASKS' | Write-PyProgress
         'SYNCING SUBMODULES' | Write-PyProgress
         git submodule update --init --merge
-        'SUBMODULES SYNCED' | Write-PyProgress -Done
-        if ($Env:CI) {
-            'SYNCING PROJECT WITH TEMPLATE' | Write-PyProgress
-            $head = git rev-parse HEAD:submodules/template
-            Invoke-Expression "$scripts/copier update --defaults --vcs-ref $head"
-        }
         'PRE-SYNC DONE' | Write-PyProgress -Done
+    }
+    if ($Env:CI) {
+        'SYNCING PROJECT WITH TEMPLATE' | Write-PyProgress
+        $head = git rev-parse HEAD:submodules/template
+        Invoke-Expression "$pyScripts/copier update --defaults --vcs-ref $head"
+        'PROJECT SYNCED WITH TEMPLATE' | Write-PyProgress
     }
 
     'SYNCING DEPENDENCIES' | Write-PyProgress
@@ -85,7 +93,7 @@ function Sync-Py {
         Invoke-Expression "$tools sync-local-dev-configs"
         'LOCAL DEV CONFIGS SYNCED' | Write-PyProgress -Done
         'INSTALLING PRE-COMMIT HOOKS' | Write-PyProgress
-        Invoke-Expression "$scripts/pre-commit install"
+        Invoke-Expression "$pyScripts/pre-commit install"
         'POST-SYNC TASKS COMPLETE' | Write-PyProgress -Done
     }
 
@@ -177,12 +185,20 @@ function Test-Command {
 function Write-PyProgress {
     <#.SYNOPSIS
     Write progress and completion messages.#>
-    Param([Parameter(Mandatory, ValueFromPipeline)][string]$Message,
-        [switch]$Done)
-    begin { $Color = $Done ? 'Green' : 'Yellow' }
+    Param(
+        [Parameter(Mandatory, ValueFromPipeline)][string]$Message,
+        [switch]$Done,
+        [switch]$Info
+    )
+    begin {
+        $InProgress = !$Done -and !$Info
+        if ($Info) { $Color = 'Magenta' }
+        elseif ($Done) { $Color = 'Green' }
+        else { $Color = 'Yellow' }
+    }
     process {
-        if (!$Done) { Write-Host }
-        Write-Host "$Message$($Done ? '' : '...')" -ForegroundColor $Color
+        if ($InProgress) { Write-Host }
+        Write-Host "$Message$($InProgress ? '...' : '')" -ForegroundColor $Color
     }
 }
 
