--- a/template/.github/workflows/contrib.yml.jinja
+++ b/template/.github/workflows/contrib.yml.jinja
@@ -32,9 +32,13 @@ jobs:
           submodules: True
       - uses: "actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c" # v5.0.0
         with:
-          python-version: "{{ python_version }}"
+          python-version: |
+            3.11
+            3.12
       - shell: "pwsh"
-        run: "scripts/Sync-Py.ps1 -Compile -Lock -Version '{{ python_version }}'"
+        run: "scripts/Sync-Py.ps1 -Compile -Lock -Version '3.11'"
+      - shell: "pwsh"
+        run: "scripts/Sync-Py.ps1 -Compile -Lock -Version '3.12'"
   ci:
     strategy:
       matrix:
@@ -49,6 +53,10 @@ jobs:
           submodules: True
       - uses: "actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c" # v5.0.0
         with:
-          python-version: "{{ python_version }}"
+          python-version: |
+            3.11
+            3.12
       - shell: "pwsh"
-        run: "scripts/Sync-Py.ps1 -Compile -Lock -Version '{{ python_version }}'"
+        run: "scripts/Sync-Py.ps1 -Compile -Lock -Version '3.11'"
+      - shell: "pwsh"
+        run: "scripts/Sync-Py.ps1 -Compile -Lock -Version '3.12'"
