Binary favicon doesn't diff properly in template, so don't include it in template

--- a/template/docs/conf.py.jinja
+++ b/template/docs/conf.py.jinja
@@ -96,8 +96,8 @@ extensions = [
 ]
 # ! Theme
 html_title = PACKAGE
-html_favicon = "_static/favicon.ico"
-html_logo = "_static/favicon.ico"
+# html_favicon = "_static/favicon.ico"
+# html_logo = "_static/favicon.ico"
 html_static_path = dpaths(STATIC)
 html_css_files = dpaths(CSS, rel=STATIC)
 html_theme = "sphinx_book_theme"
