--- a/template/.github/workflows/codeql.yml.jinja
+++ b/template/.github/workflows/codeql.yml.jinja
@@ -7,6 +7,8 @@ on:
 jobs:
   analyze:
     runs-on: "{{ actions_runner }}"
+    permissions:
+      security-events: write
     steps:
       - uses: "actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11" # v4.1.1
       - uses: "github/codeql-action/init@3ab4101902695724f9365a384f86c1074d94e18c" # v3.24.7
